# radio-streamer

./: .cache  .env.example  .gitignore  CONFIG_README.md  MEDIA_OBJECTS_CONFIG.md  MEDIA_PLAYER_MODULARIZATION.md  Makefile  NOW_PLAYING_BUTTON_README.md  README.md  SONOS_INTEGRATION.md  SPOTIFY_INTEGRATION.md  SPOTIFY_REMOVAL.md  SPOTIFY_SETUP.md  STREAMDECK_CAROUSEL_README.md  STREAMDECK_MODULARIZATION.md  TESTING.md  TEST_MIGRATION_SUMMARY.md  THUMBNAILS_README.md  __init__.py  api.py  app.py  config.json  create_demo_images.py  create_overlay_comparison.py  create_verification_images.py  debug_overlay.py  debug_streamdeck.py  demo_media_config.py  demo_now_playing_complete.py  final_overlay_test.py  local_album_player.py  main.py  media_config.json  media_config_manager.py  media_objects.json  media_player.py  migrate_tests.py  pyproject.toml  pytest.ini  radio.py  (+22 more)
controllers/: app_controller.py
esp32-ui/: QUICKSTART.md  README.md  User_Setup.h  build.sh  lv_conf.h  platformio.ini
media/: __init__.py  album_manager.py  media_objects.py  media_player.py  player_core.py  radio_manager.py  sonos_manager.py  types.py
radio-frontend/: README.md  package-lock.json  package.json  vite.config.ts
streamdeck/: __init__.py  button_manager.py  carousel_manager.py  controller.py  device_manager.py  image_creator.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_configuration.py  test_integration.py  test_integration_full.py  test_legacy_compatibility.py  test_media_modules.py  test_media_player.py  test_media_types.py  test_streamdeck.py
(+14 files in other folders)
