[project]
name = "radio-streamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "pydantic>=2.11.7",
    "pygame>=2.6.1",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
    "python-vlc>=3.0.0",
    "streamdeck>=0.9.5",
    "pillow>=10.0.0",
    "textual>=0.47.0",
    "rich>=13.0.0",
    "spotipy>=2.22.1",
    "python-dotenv>=1.1.1",
    "pytest>=8.4.1",
    "soco>=0.30.10",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-mock>=3.10.0",
]

[project.optional-dependencies]
spotify = ["spotipy>=2.22.1"]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-mock>=3.10.0",
]
